<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uAccount</string>
    <string name="app_desc">be with you</string>
    <string name="app_robot_name">uAccount</string>
    <string name="app_about">专注打造账本功能，为个人资金流提供独特管理服务</string>
    <string name="app_copyright">版权所有，违者必究</string>
    <string name="app_mall">U城</string>
    <string name="app_info_contact">联系我们</string>
    <string name="app_info_about">关于应用</string>
    <string name="app_info_recruit">招兵买马</string>
    <string name="app_info_drawback">问题反馈</string>
    <string name="app_info_help">帮助信息</string>
    <string name="app_info_share">推荐好友</string>
    <string name="app_info_link">相关链接</string>
    <string name="app_service_1">记账</string>
    <string name="app_service_desc_1">天使之所以会飞，是因为她们把自己看得很轻。</string>
    <string name="app_service_2">核查</string>
    <string name="app_service_desc_2">地球是运动的，一个人不会永远处在倒霉的位置。</string>
    <string name="app_service_3">报表</string>
    <string name="app_service_desc_3">不是人人都能活的低调，可以低调的基础是随时都能高调。</string>
    
    <string name="txt_content">内容</string>
    <string name="txt_navigation">导航栏</string>
    <string name="txt_label">标签</string>
    <string name="txt_qrscan">扫一扫</string>
    <string name="txt_qrcode">二维码</string>
    <string name="txt_article">读物</string>
    <string name="txt_file">文件</string>
    <string name="txt_commodity">商品</string>
    <string name="txt_nothing">暂无信息</string>
    <string name="txt_home">首页</string>
    <string name="txt_text">文本</string>
    <string name="txt_picture">图片</string>
    <string name="txt_other">其他</string>
    <string name="txt_sys_dir">系统目录</string>
    <string name="txt_security_info">安全信息</string>
    <string name="txt_service_kind">服务类别</string>
    <string name="txt_news">最新消息</string>
    <string name="txt_user_info">详情</string>
    <string name="txt_usercontact_new">新朋友的账号</string>
    <string name="txt_download_paused">停止下载中</string>
    <string name="txt_download_ing">正在下载中</string>
    <string name="txt_download_ed">已下载完成</string>
	<string name="txt_refreshable_refresh_pull">下拉可以刷新</string>
	<string name="txt_refreshable_refresh_release">释放立即刷新</string>
	<string name="txt_refreshable_refreshing">正在刷新......</string>
	<string name="txt_refreshable_not_updated">暂未更新过</string>
	<string name="txt_refreshable_updated_at">上次更新于%1$d分钟前</string>
	<string name="txt_refreshable_updated_just_now">刚刚更新</string>
	<string name="txt_refreshable_time_error">时间有问题</string>
    
    <string name="btn_user">用户</string>
    <string name="btn_tourist">游客</string>
    <string name="btn_login">登陆</string>
    <string name="btn_login_forword">前往登陆</string>
    <string name="btn_logout">退出账号</string>
    <string name="btn_setting">设置</string>
    <string name="btn_information">信息</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_added">已加入</string>
    <string name="btn_download">下载</string>
    <string name="btn_download_file">文件下载</string>
    <string name="btn_download_zone">下载区域</string>
    <string name="btn_register">免费注册</string>
    <string name="btn_home">主页</string>
    <string name="btn_account">个人</string>
    <string name="btn_delete">删除</string>
    <string name="btn_contact">联系</string>
    <string name="btn_message">消息</string>
    <string name="btn_collection">收藏</string>
    <string name="btn_zone">仓库</string>
    <string name="btn_exit">退出</string>
    <string name="btn_send">发送</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_album">相册</string>
    <string name="btn_accountbook">账本</string>
    <string name="btn_recordaccount">记账</string>
    <string name="btn_add">添加</string>
    <string name="btn_test">测试</string>
    <string name="btn_help">帮助</string>
    <string name="btn_backspace">退格</string>
    <string name="btn_mall">U城</string>
    <string name="btn_me">我的</string>
 	<string name="btn_me_qrscan">我的二维码</string>
    <string name="btn_return">返回</string>
    <string name="btn_return_home">返回主页</string>
    <string name="btn_forget_password">忘记密码</string>
    <string name="btn_article_contribute">你所贡献的文章</string>
    <string name="btn_file_localfile">本地文件</string>
    <string name="btn_file_downloadlist">下载列表</string>
    <string name="btn_commodity_shoppinglist">购物单</string>
    <string name="btn_commodity_purchased">购买历史</string>
    <string name="btn_passcode_update">更新</string>
    <string name="btn_passcode_open">开启</string>
    <string name="btn_passcode_close">关闭</string>
    
 	<string name="msg_qrscan">请对准盒子上的二维码扫描即可</string>
    <string name="msg_welcome">欢迎你的到来</string>
    <string name="msg_development">此功能还在开发中！</string>
    <string name="msg_exit">再按一次退出程序</string>
    <string name="msg_input">请输入相关信息！</string>
    <string name="msg_net_disconnected">网络已断开！</string>
    <string name="msg_operation_fail">操作失败，请重试！</string>
    <string name="msg_register_success">注册成功，跳转至登陆界面！</string>
    <string name="msg_login_error">不正确的登录信息请核实！</string>
    <string name="msg_login_reset">此操作后你将重新登陆？</string>
    <string name="msg_login_descfor">以获取更多功能！</string>
    <string name="msg_logout">你确定退出当前账号吗？</string>
    <string name="msg_file_again">已存在该同名文件，是否覆盖？</string>
    <string name="msg_success">操作成功！</string>
    <string name="msg_success_download">操作成功，已加入下载列表，请前往处理！</string>
    <string name="msg_chat_robot">uAccount很高兴为你服务！</string>
    <string name="msg_passcode_error">密码不正确！</string>
    <string name="msg_passcode_different">密码不相同！</string>
    <string name="msg_passcode_open">应用锁打开成功！</string>
    <string name="msg_passcode_cancel">应用锁取消成功！</string>
    <string name="msg_passcode_update">应用锁修改成功！</string>
    
    <string name="tip_account">请输入账号</string>
    <string name="tip_password">请输入密码</string>
    <string name="tip_password_again">请输入确认密码</string>
    <string name="tip_keyword">请输入关键字</string>
    
    <string name="title_passcode_input_new">输入新密码</string>
    <string name="title_passcode_input_old">输入旧密码</string>
    <string name="title_passcode_input">输入密码</string>
    <string name="title_passcode_again">再次输入</string>
    <string name="title_setting_basic">基本信息</string>
    <string name="title_setting_passcode">安全锁</string>
    <string name="title_mall_file">文件商城</string>
    <string name="title_zone_article">读物区域</string>
    <string name="title_zone_file">文件区域</string>
    <string name="title_zone_commodity">商品区域</string>
    <string name="title_user_info_qrcode">二维码</string>
    
    <string name="validate_remote_again">该内容太热门了，已经存在相同</string>
    <string name="validate_equalTo_password">请输入相同的密码</string>
    
    <!-- 非国际化 -->
    <string name="pronoun_add">+</string>
    <string name="pronoun_numpad_0">0</string>
    <string name="pronoun_numpad_1">1</string>
    <string name="pronoun_numpad_2">2</string>
    <string name="pronoun_numpad_3">3</string>
    <string name="pronoun_numpad_4">4</string>
    <string name="pronoun_numpad_5">5</string>
    <string name="pronoun_numpad_6">6</string>
    <string name="pronoun_numpad_7">7</string>
    <string name="pronoun_numpad_8">8</string>
    <string name="pronoun_numpad_9">9</string>
    
</resources>
