<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
	style="@style/DefaultWrapper"
	android:id="@+id/layoutWrapper"
	android:padding="0dp"
	android:orientation="vertical"
	android:background="@color/defaultTheme"
    tools:context="${relativePackage}.${activityClass}">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
	    
	    <TextView 
        	style="@style/DefaultTextView"
	        android:id="@+id/txtvTitle"
	        android:layout_alignParentBottom="true"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:textColor="@color/white"
	        android:textSize="22sp"
	        android:text="@string/title_passcode_input" />
	
	    <com.hnsun.myaccount.view.BrandView
	        style="@style/DefaultBrandView"
			android:layout_above="@id/txtvTitle"
			android:layout_centerHorizontal="true"
	        android:background="@color/bgInitBrand"
	        auto:mainColor="@color/green"
	        auto:descColor="@color/black"
	        auto:mainSize="60sp"
	        auto:descSize="23sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <EditText
            style="@style/ActPasscodeEditText"
            android:id="@+id/etCode1" />

        <EditText
            style="@style/ActPasscodeEditText"
            android:id="@+id/etCode2" />

        <EditText
            style="@style/ActPasscodeEditText"
            android:id="@+id/etCode3" />

        <EditText
            style="@style/ActPasscodeEditText"
            android:id="@+id/etCode4" />
    </LinearLayout>

    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="16dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        
        <TableRow>
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn1"
                android:text="@string/pronoun_numpad_1" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn2"
                android:text="@string/pronoun_numpad_2" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn3"
                android:text="@string/pronoun_numpad_3" />
        </TableRow>
        
        <TableRow>
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn4"
                android:text="@string/pronoun_numpad_4" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn5"
                android:text="@string/pronoun_numpad_5" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn6"
                android:text="@string/pronoun_numpad_6" />
        </TableRow>
        
        <TableRow>
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn7"
                android:text="@string/pronoun_numpad_7" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn8"
                android:text="@string/pronoun_numpad_8" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn9"
                android:text="@string/pronoun_numpad_9" />
        </TableRow>
        
        <TableRow>
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btnHelp"
                android:onClick="@null" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btn0"
                android:text="@string/pronoun_numpad_0" />
            
            <Button 
                style="@style/ActPasscodeButton"
                android:id="@+id/btnBackspace"
                android:text="@string/btn_backspace"
                android:onClick="@null" />
        </TableRow>
    </TableLayout>
</LinearLayout>
