<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/title_setting_passcode">
        <PreferenceScreen android:title="@string/txt_nothing">
            <intent android:action="android.intent.action.VIEW" android:data="http://www.baidu.com" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_setting_basic">
        <EditTextPreference 
            android:key="SYS_DIR"
            android:title="@string/txt_sys_dir"
            android:dialogTitle="@string/txt_sys_dir" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Demo" >  
        <CheckBoxPreference  
            android:key="checkbox_preference"  
            android:summary="这是一个复选框"  
            android:title="复选框设置" />  
        <EditTextPreference  
            android:dialogTitle="请输入你最喜欢的种族"  
            android:key="edittext_preference"  
            android:summary="一个使用了编辑文本对话框的例子"  
            android:title="请输入你最喜欢的种族" />  
        <ListPreference
            android:key="list_preferenc"
            android:title="请选择一项"
            android:summary="一个使用了列表对话框的例子"
            android:dialogTitle="请选择一项" />  
    </PreferenceCategory>
</PreferenceScreen>

<!-- 当前应用设置界面 -->